manifests/kube-state-metrics/kube-state-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-state-metrics

---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
spec:
  type: LoadBalancer # ⭐ CHANGED: expose externally via K3d LB
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
  selector:
    app: kube-state-metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.11.0
          ports:
            - name: http-metrics
              containerPort: 8080
