manifests/kube-state-metrics/kube-state-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /kube-state-metrics
            pathType: Prefix
            backend:
              service:
                name: kube-state-metrics
                port:
                  number: 8080
